# DocConverter

./: .replit  README.md  app.py  pyproject.toml  replit.nix  requirements.txt
static/: styles.css
templates/: convert.html  download.html  index.html
uploads/: ATTENDANCEEE.docx  CASILI_ABEGAIL_TTL2_M4.docx  CASILI_ABEGAIL_TTL2_M7.docx  Capture.txt  GRADUATION-SCRIPT-2024.docx  SUMMARY_DAILY_ACCOMPLISHMENT_REPORT._Jeffrey_ORADA.docx  TTL2-lesson-8.docx  Task._Jeffrey_Orada.docx  img20240531_08411602.txt
