[tool.poetry]
name = "repl-nix-docconverter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_docconverter"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "3.0.3"
pdf2docx = "^0.5.8"
werkzeug = "^3.0.3"
pytesseract = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
